[package]
name = "qyzanaq"
version = "0.1.0"
edition = "2021"
authors = ["djakish"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/djakish/qyzanaq"
homepage = "https://github.com/djakish/qyzanaq"
description = """
extremly basic pomodoro app, with notify-send notifications. 
"""
keywords = ["cli", "pomodoro"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "3.1.1", features = ["derive"] }
crossterm = "0.23.0"